--- a/Casanova/Casanova/ProfileSettingsTableViewCell.xib
+++ b/Casanova/Casanova/ProfileSettingsTableViewCell.xib
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProfileSettingsTableViewCell" customModule="Casanova" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="ProfileSettingsTableViewCell" customModule="Casanova" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="78.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8d1-Wx-Xnf">
-                        <rect key="frame" x="10" y="11" width="50" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8U-0k-Opn">
+                        <rect key="frame" x="20" y="2" width="280" height="76.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8d1-Wx-Xnf">
+                                <rect key="frame" x="16" y="16" width="80" height="44.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="ueb-bh-SER"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UdY-AK-Wma">
+                                <rect key="frame" x="104" y="23.5" width="160" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="ueb-bh-SER"/>
+                            <constraint firstItem="8d1-Wx-Xnf" firstAttribute="centerY" secondItem="y8U-0k-Opn" secondAttribute="centerY" id="5Z2-P2-Zck"/>
+                            <constraint firstItem="UdY-AK-Wma" firstAttribute="centerY" secondItem="y8U-0k-Opn" secondAttribute="centerY" id="GZb-AE-8vZ"/>
+                            <constraint firstItem="UdY-AK-Wma" firstAttribute="leading" secondItem="8d1-Wx-Xnf" secondAttribute="trailing" constant="8" id="bKu-Aj-gII"/>
+                            <constraint firstAttribute="trailing" secondItem="UdY-AK-Wma" secondAttribute="trailing" constant="16" id="meh-kS-QTC"/>
+                            <constraint firstItem="8d1-Wx-Xnf" firstAttribute="top" secondItem="y8U-0k-Opn" secondAttribute="top" constant="16" id="qpO-xN-WNu"/>
+                            <constraint firstItem="8d1-Wx-Xnf" firstAttribute="leading" secondItem="y8U-0k-Opn" secondAttribute="leading" constant="16" id="s08-g5-fpD"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UdY-AK-Wma">
-                        <rect key="frame" x="70" y="6" width="245" height="30"/>
-                        <nil key="textColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
-                    </textField>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="UdY-AK-Wma" secondAttribute="trailing" constant="5" id="1u5-zI-qJS"/>
-                    <constraint firstItem="8d1-Wx-Xnf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Eir-AO-dmz"/>
-                    <constraint firstItem="UdY-AK-Wma" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LOV-6m-UPD"/>
-                    <constraint firstItem="8d1-Wx-Xnf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="re9-oa-Loi"/>
-                    <constraint firstItem="UdY-AK-Wma" firstAttribute="leading" secondItem="8d1-Wx-Xnf" secondAttribute="trailing" constant="10" id="shz-uI-54d"/>
+                    <constraint firstAttribute="bottom" secondItem="y8U-0k-Opn" secondAttribute="bottom" id="pGe-e1-ORG"/>
+                    <constraint firstItem="y8U-0k-Opn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="tbS-Ax-T8N"/>
+                    <constraint firstAttribute="trailing" secondItem="y8U-0k-Opn" secondAttribute="trailing" constant="20" id="wKy-2h-dSD"/>
+                    <constraint firstItem="y8U-0k-Opn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="xaN-fS-RrP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="containerView" destination="y8U-0k-Opn" id="1BX-Mm-GCZ"/>
                 <outlet property="textField" destination="UdY-AK-Wma" id="BL3-nA-2yJ"/>
                 <outlet property="titleLabel" destination="8d1-Wx-Xnf" id="pbQ-un-qhL"/>
             </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="169.56521739130437"/>
         </tableViewCell>
     </objects>
 </document>
