--- a/Casanova/Casanova/PostTextView.xib
+++ b/Casanova/Casanova/PostTextView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -24,18 +24,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TvH-35-EAd">
-                    <rect key="frame" x="24" y="15" width="393" height="54"/>
+                    <rect key="frame" x="24" y="15" width="393" height="56.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fS8-xb-Vo1">
-                    <rect key="frame" x="366.5" y="77" width="50.5" height="26"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="26" id="AX6-xq-1MY"/>
-                        <constraint firstAttribute="width" constant="50.600000000000001" id="dGq-lJ-7Qf"/>
-                    </constraints>
-                    <state key="normal" title="Button"/>
+                    <rect key="frame" x="366" y="79" width="51" height="24"/>
+                    <inset key="contentEdgeInsets" minX="10" minY="3" maxX="10" maxY="3"/>
+                    <state key="normal" title="发布"/>
                     <connections>
                         <action selector="postButtonClicked:" destination="-1" eventType="touchUpInside" id="54d-z6-W6T"/>
                     </connections>
@@ -47,7 +44,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzE-xA-glE">
-                    <rect key="frame" x="24" y="77" width="26" height="26"/>
+                    <rect key="frame" x="24" y="79" width="26" height="26"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="26" id="8qq-1f-hEe"/>
                         <constraint firstAttribute="height" constant="26" id="J2N-b5-2Ph"/>
